--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -8,20 +8,33 @@ header{
     display: flex;
     align-items: center;
 }
+h1{
+    font: 2rem 'Dancing Script', cursive;
+}
 header img{
     height: 90%;
     width: auto;
-    margin: 5px;
+    margin: 0.3rem;
 
 }
+
 #prideshow{
+    height: 50vh;
     width: 100vw;
+    overflow: hidden;
     position: relative;
-    margin: auto;
 }
+
 .prideslide{
-    display:none
+    height: 300px;
 }
+.prideslide img{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: max-content;
+}
+
 .prev, .next{
     cursor: pointer;
     position: absolute;
